# GroundSealWorkflowRuntime

./: .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md  TASKS.md  pyproject.toml
.cursor/rules/: documentation.mdc  evaluation.mdc  execution.mdc  project.mdc
.github/workflows/: ci.yml
docs/: architecture.md  case-study.md  code-review-notes.md  coding-guidelines.md  design-principles.md  dev-setup.md  evaluation-baseline-report.md  evaluation-plan.md  execution-rhythm.md  failure-analysis-plan.md  failure-taxonomy.md  glossary.md  integration-contract.md  integration-recommendations.md  invariants.md  known-limitations.md  open-questions.md  repair-notes.md  review-ux-notes.md  roadmap.md  storage-contract.md
docs/contracts/: adapter-contract.md  checkpoint.md  diagnostic-report.md  interrupt-resume.md  node-contract.md  patch-model.md  public-api.md  run-state.md  workflow-definition.md
docs/experiments/: approval-policy-comparison.md  decision-memo.md  storage-backend-comparison.md
eval/: baseline.json
groundseal/: __init__.py  constants.py  errors.py
groundseal/adapter/: __init__.py  auth.py  platform.py
groundseal/diagnostics/: __init__.py  report.py
groundseal/storage/: io.py  (+4 more)
scripts/: run_eval.py  run_experiments.py
tests/: conftest.py  test_approver_auth.py  test_diagnostics.py  test_evaluation_baseline.py  test_experiments.py  test_failure_paths.py  test_integration_boundary.py  test_invariants.py  test_runtime.py  test_schemas.py  test_storage.py  test_workflow_registry.py
workflows/: fixture_approval_v1.json  linear_no_approval_v1.json
(+32 files in other folders)
