[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groundseal-workflow-runtime"
version = "0.2.0"
description = "Typed, interruptible, resumable workflow runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["groundseal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
